feat: update CategorySortOptionRepositoryImpl to use List.of and change sort field to UPDATE_TIME